# vmx

./: .gitignore  Cargo.toml  README.md
.devcontainer/: Dockerfile  devcontainer.json
doc/: auction.md  vm.md
src/: exchange.rs  lib.rs  main.rs  protocol.rs  vm.rs
src/auction/: bidding_program.rs  book.rs  configuration.rs  mod.rs  program.rs
src/participant/: local.rs  mocks.rs  mod.rs
src/protocol/: json.rs  mod.rs
src/server/: mocks.rs  mod.rs  tcp.rs
src/server/tcp/: mod.rs
src/vm/: mod.rs
tests/: auction.rs  individual_participant_auction.rs
tests/helpers/: mod.rs  program_builders.rs
tests/mocks/: mod.rs  participant.rs  server.rs
