[package]
name = "vmx"
version = "0.1.0"
authors = ["Jeremy Schroeder <jpschroeder2014@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-traits = "0.2.14"
num-derive = "0.3.3"
regex = "1.5.4"
lazy_static = "1.4.0"
timer = "0.2.0"
chrono = "0.4.19"
