[package]
name = "vmx"
version = "0.1.0"
authors = ["Jeremy Schroeder <jpschroeder2014@gmail.com>"]
edition = "2018"

[dependencies]
num-traits = "0.2.14"
num-derive = "0.3.3"
regex = "1.5.4"
lazy_static = "1.4.0"
timer = "0.2.0"
chrono = "0.4.19"
clap = { version = "2.33.3", optional = true }

[features]
default = ["build-binary"]
build-binary = ["clap"]

[[bin]]
name = "vmx"
required-features = ["build-binary"]
